//增加页面，优化页面

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
 
 <!--导航-->
-<nav class="ui inverted attached segment m-padded-tb-mini">
+<nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 class="ui teal header item">Blog</h2>
-            <a href="#" class="item m-mobile-hide m-item"><i class="home icon"></i> 首页</a>
+            <a href="#" class="active item m-mobile-hide m-item"><i class="home icon"></i> 首页</a>
             <a href="#" class="item m-mobile-hide m-item"><i class="idea icon"></i> 分类</a>
             <a href="#" class="item m-mobile-hide m-item"><i class="tags icon"></i> 标签</a>
             <a href="#" class="item m-mobile-hide m-item"><i class="clone icon"></i> 归档</a>
@@ -43,7 +43,7 @@
                <div class="ui top attached segment">
                    <div class="ui middle aligned two column grid">
                        <div class="column">
-                           <h3 class="ui header teal">博客</h3>
+                           <h3 class="ui header teal">标签</h3>
                        </div>
                        <div class="right aligned column">
                            共 <h3 class="ui orange header m-inline-block m-text-thin">14</h3> 篇
@@ -52,12 +52,12 @@
                </div>
                 <!--content-->
                <div class="ui attached segment">
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -84,12 +84,12 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -116,12 +116,12 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -148,12 +148,12 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -180,12 +180,12 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -212,12 +212,12 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -244,12 +244,12 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -276,12 +276,12 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -308,12 +308,12 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -340,12 +340,12 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -372,12 +372,12 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -404,12 +404,76 @@
                            </div>
                        </div>
                    </div>
-                   <div class="ui padded vertical segment m-padded-tb-large">
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
                        <div class="ui mobile reversed stackable grid">
                            <div class="eleven wide column">
                                <h3 class="ui header">标题1</h3>
                                <p class="m-text">这是段落内容</p>
-                               <div class="ui grid">
+                               <div class="ui stackable grid">
+                                   <div class="eleven wide column">
+                                       <div class="ui mini horizontal link list">
+                                           <div class="item">
+                                               <img src="https://picsum.photos/100" alt="" class="ui avatar image">
+                                               <div class="content"><a href="#" class="header">王小龘龖</a></div>
+                                           </div>
+                                           <div class="item">
+                                               <i class="calendar icon"></i>2020-11-01
+                                           </div>
+                                           <div class="item">
+                                               <i class="eye icon"></i>1234
+                                           </div>
+                                       </div>
+                                   </div>
+                                   <div class="right aligned five wide column">
+                                       <a href="#" target="_blank" class="ui label teal basic m-padded-tiny m-text-thin">认知升级</a>
+                                   </div>
+                               </div>
+                           </div>
+                           <div class="five wide column">
+                               <a href="#" target="_blank">
+                                   <img src="./static/images/placeholder.jpg" alt="" class="ui rounded image">
+                               </a>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
+                       <div class="ui mobile reversed stackable grid">
+                           <div class="eleven wide column">
+                               <h3 class="ui header">标题1</h3>
+                               <p class="m-text">这是段落内容</p>
+                               <div class="ui stackable grid">
+                                   <div class="eleven wide column">
+                                       <div class="ui mini horizontal link list">
+                                           <div class="item">
+                                               <img src="https://picsum.photos/100" alt="" class="ui avatar image">
+                                               <div class="content"><a href="#" class="header">王小龘龖</a></div>
+                                           </div>
+                                           <div class="item">
+                                               <i class="calendar icon"></i>2020-11-01
+                                           </div>
+                                           <div class="item">
+                                               <i class="eye icon"></i>1234
+                                           </div>
+                                       </div>
+                                   </div>
+                                   <div class="right aligned five wide column">
+                                       <a href="#" target="_blank" class="ui label teal basic m-padded-tiny m-text-thin">认知升级</a>
+                                   </div>
+                               </div>
+                           </div>
+                           <div class="five wide column">
+                               <a href="#" target="_blank">
+                                   <img src="./static/images/placeholder.jpg" alt="" class="ui rounded image">
+                               </a>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="ui padded vertical segment m-padded-tb-large m-mobile-lr-clear">
+                       <div class="ui mobile reversed stackable grid">
+                           <div class="eleven wide column">
+                               <h3 class="ui header">标题1</h3>
+                               <p class="m-text">这是段落内容</p>
+                               <div class="ui stackable grid">
                                    <div class="eleven wide column">
                                        <div class="ui mini horizontal link list">
                                            <div class="item">
@@ -582,12 +646,10 @@
         <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright@2020-2020</p>
     </div>
 </footer>
-
 <script>
     $(".m-menu.toggle").click(function () {
         $(".m-item").toggleClass("m-mobile-hide")
     });
 </script>
-
 </body>
 </html>
